@@ -1,9 +1,10 @@
 package hanium.modic.backend.domain.image.util;
 
-import static com.amazonaws.HttpMethod.*;
 import static hanium.modic.backend.common.error.ErrorCode.*;
 
-import java.net.URL;
+import java.security.PrivateKey;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
@@ -12,138 +13,196 @@ import java.util.stream.Collectors;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
-import com.amazonaws.HttpMethod;
-import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.DeleteObjectsRequest;
-import com.amazonaws.services.s3.model.DeleteObjectsRequest.KeyVersion;
-import com.amazonaws.services.s3.model.GeneratePresignedUrlRequest;
-import com.amazonaws.services.s3.model.MultiObjectDeleteException;
+import com.amazonaws.services.cloudfront.CloudFrontUrlSigner;
 
+import hanium.modic.backend.common.error.ErrorCode;
 import hanium.modic.backend.common.error.exception.AppException;
+import hanium.modic.backend.common.property.property.CloudFrontProperties;
 import hanium.modic.backend.common.property.property.S3Properties;
 import hanium.modic.backend.domain.image.domain.ImagePrefix;
 import hanium.modic.backend.domain.image.dto.CreateImageSaveUrlDto;
-import lombok.RequiredArgsConstructor;
+import hanium.modic.backend.domain.image.dto.ParsedImageName;
+import hanium.modic.backend.domain.image.service.ImageValidationService;
 import lombok.extern.slf4j.Slf4j;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.CopyObjectRequest;
+import software.amazon.awssdk.services.s3.model.Delete;
+import software.amazon.awssdk.services.s3.model.DeleteObjectRequest;
+import software.amazon.awssdk.services.s3.model.DeleteObjectsRequest;
+import software.amazon.awssdk.services.s3.model.ObjectIdentifier;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
+import software.amazon.awssdk.services.s3.model.S3Exception;
+import software.amazon.awssdk.services.s3.presigner.S3Presigner;
+import software.amazon.awssdk.services.s3.presigner.model.PresignedPutObjectRequest;
+import software.amazon.awssdk.services.s3.presigner.model.PutObjectPresignRequest;
 
 @Slf4j
 @Service
-@RequiredArgsConstructor
 public class S3ImageUtil implements ImageUtil {
 
 	private final S3Properties s3Properties;
-	private final AmazonS3 amazonS3Client;
+	private final CloudFrontProperties cloudFrontProperties;
 
-	private final int EXPIRATION_TIME = 1000 * 60 * 2; // 2분
+	private final S3Client s3Client;
+	private final S3Presigner s3Presigner;
+	private final ImageValidationService imageValidationService;
+	private final PrivateKey pk;
+
+	private final Duration EXPIRATION_TIME = Duration.ofMinutes(2); // 2분
+	private final String HTTPS = "https://";
+
+	public S3ImageUtil(S3Properties s3Properties,
+		CloudFrontProperties cloudFrontProperties,
+		S3Client s3Client,
+		S3Presigner s3Presigner,
+		ImageValidationService imageValidationService
+	) {
+		this.pk = CloudFrontKeyLoader.loadFromPem(cloudFrontProperties.getPrivateKeyPem());
+		this.s3Properties = s3Properties;
+		this.cloudFrontProperties = cloudFrontProperties;
+		this.s3Client = s3Client;
+		this.s3Presigner = s3Presigner;
+		this.imageValidationService = imageValidationService;
+	}
 
 	// 이미지 삭제
 	@Override
-	@Async
+	@Async("imageTaskExecutor")
 	public void deleteImage(String imagePath) {
 		validateImagePath(imagePath);
 
-		// TODO : 실패한 이미지 경로를 로그로 남기거나 처리하는 로직 추가
-		amazonS3Client.deleteObject(s3Properties.getBucketName(), imagePath);
+		try {
+			DeleteObjectRequest deleteObjectRequest = DeleteObjectRequest.builder()
+				.bucket(s3Properties.getBucketName())
+				.key(imagePath)
+				.build();
+			s3Client.deleteObject(deleteObjectRequest);
+		} catch (S3Exception e) {
+			log.error("S3ImageUtil.deleteImage() - S3Exception: {}", e.getMessage());
+			throw new AppException(S3_SERVER_ERROR);
+		}
 	}
 
 	// 여러 이미지 삭제
 	@Override
-	@Async
-	public void deleteImages(List<String>imagePaths) {
+	@Async("imageTaskExecutor")
+	public void deleteImages(List<String> imagePaths) {
 		if (imagePaths == null || imagePaths.isEmpty()) {
 			return;
 		}
+
 		for (String imagePath : imagePaths) {
 			validateImagePath(imagePath);
 		}
 
-		// KeyVersion 객체 리스트로 변환
-		List<KeyVersion> keyVersions = imagePaths.stream()
-			.map(KeyVersion::new)
-			.toList();
-
-		DeleteObjectsRequest deleteObjectsRequest = new DeleteObjectsRequest(s3Properties.getBucketName())
-			.withKeys(keyVersions);
+		List<ObjectIdentifier> objectIdentifiers = imagePaths.stream()
+			.map(key -> ObjectIdentifier.builder().key(key).build())
+			.collect(Collectors.toList());
 
 		try {
-			amazonS3Client.deleteObjects(deleteObjectsRequest);
-		} catch (MultiObjectDeleteException e) {
-			// 일부 실패한 경우
-			log.error("S3ImageUtil.deleteImages() - MultiObjectDeleteException: {}", e.getMessage());
-
-			// TODO : 실패한 이미지 경로를 로그로 남기거나 처리하는 로직 추가
-			e.getErrors().forEach(error ->
-				System.err.println(error.getKey())
-			);
+			DeleteObjectsRequest deleteObjectsRequest = DeleteObjectsRequest.builder()
+				.bucket(s3Properties.getBucketName())
+				.delete(Delete.builder().objects(objectIdentifiers).build())
+				.build();
+			s3Client.deleteObjects(deleteObjectsRequest);
+		} catch (S3Exception e) {
+			log.error("S3ImageUtil.deleteImages() - S3Exception: {}", e.getMessage());
+			throw new AppException(S3_SERVER_ERROR);
 		}
 	}
 
-	// 이미지 URL 생성
-	@Override
-	public String createImageUrl(ImagePrefix imagePrefix, String imagePath) {
-		validateImagePath(imagePath);
-
-		return amazonS3Client.getUrl(s3Properties.getBucketName(), imagePath).toString();
-	}
-
-	// 저장 PreSignedUrl 생성
+	// S3 업로드용 PreSignedUrl 생성
 	@Override
 	public CreateImageSaveUrlDto createImageSaveUrl(ImagePrefix imagePrefix, String fullFileName) {
-		String path = createPath(imagePrefix, fullFileName);
+		String path = createPath(imagePrefix);
 
-		GeneratePresignedUrlRequest request = createGeneratePreSignedUrlRequest(path, PUT, getUrlExpiration());
-		URL url = amazonS3Client.generatePresignedUrl(request);
+		PutObjectRequest putObjectRequest = PutObjectRequest.builder()
+			.bucket(s3Properties.getBucketName())
+			.key(path)
+			.build();
 
-		return new CreateImageSaveUrlDto(url.toString(), path);
+		PutObjectPresignRequest presignRequest = PutObjectPresignRequest.builder()
+			.signatureDuration(EXPIRATION_TIME)
+			.putObjectRequest(putObjectRequest)
+			.build();
+
+		PresignedPutObjectRequest presignedPutObjectRequest = s3Presigner.presignPutObject(presignRequest);
+		String url = presignedPutObjectRequest.url().toString();
+
+		return new CreateImageSaveUrlDto(url, path);
 	}
 
-	// 조회 PreSignedUrl 생성
+	// CloudFront 조회용 Signed URL 생성
 	@Override
-	public String createImageGetUrl(String imagePath) {
-		validateImagePath(imagePath);
+	public String createImageGetUrl(String resourcePath) {
+		try {
+			String domain = cloudFrontProperties.getDomain();
+			// 도메인에 프로토콜이 포함된 경우 제거
+			if (domain.startsWith("https://")) {
+				domain = domain.substring(8);
+			} else if (domain.startsWith("http://")) {
+				domain = domain.substring(7);
+			}
+			// 경로는 선행 슬래시 보장
+			String path = resourcePath.startsWith("/") ? resourcePath : ("/" + resourcePath);
+			String resourceUrl = HTTPS + domain + path;
 
-		GeneratePresignedUrlRequest request = createGeneratePreSignedUrlRequest(imagePath, GET, getUrlExpiration());
-		return amazonS3Client.generatePresignedUrl(request).toString();
+			Date expires = Date.from(Instant.now().plus(EXPIRATION_TIME));
+
+			return CloudFrontUrlSigner.getSignedURLWithCannedPolicy(
+				resourceUrl,
+				cloudFrontProperties.getKeyPairId(),
+				pk,
+				expires
+			);
+		} catch (Exception e) {
+			log.error("서명 URL 생성 중 에러 발생: {}", e.getMessage(), e);
+			throw new AppException(ErrorCode.S3_SERVER_ERROR);
+		}
 	}
 
-	// 이미지 저장확인
+	// FullImageName 파싱
 	@Override
-	public boolean isImageSaved(ImagePrefix imagePrefix, String imagePath) {
-		validateImagePath(imagePath);
+	public ParsedImageName parseFullImageName(String fullFileName) {
+		imageValidationService.validateFullFileName(fullFileName);
 
-		return amazonS3Client.doesObjectExist(s3Properties.getBucketName(), imagePath);
+		int dotIndex = fullFileName.lastIndexOf('.');
+		String fileName = fullFileName.substring(0, dotIndex);
+		String fileExtension = fullFileName.substring(dotIndex + 1);
+
+		return new ParsedImageName(fileName, fileExtension);
 	}
 
-	// S3 preSigned URL 요청 객체 생성
-	private GeneratePresignedUrlRequest createGeneratePreSignedUrlRequest(
-		String path,
-		HttpMethod method,
-		Date expiration
-	) {
-		return new GeneratePresignedUrlRequest(s3Properties.getBucketName(), path)
-			.withMethod(method)
-			.withExpiration(expiration);
-	}
-
-	// 파일이 저장될 경로 생성
-	private String createPath(ImagePrefix imagePrefix, String fullFileName) {
-		// 이미지명 곂치지않게 uuid 추가
-		return String.format("%s/%s", imagePrefix.getPrefix(), UUID.randomUUID() + "-" + fullFileName);
-	}
-
-	// PreSignedUrl 만료 시간 설정
-	private Date getUrlExpiration() {
-		Date expiration = new Date();
-		long expTimeMillis = expiration.getTime();
-		expTimeMillis += EXPIRATION_TIME;
-		expiration.setTime(expTimeMillis);
-		return expiration;
+	// 파일 경로 생성 (uuid 추가)
+	private String createPath(ImagePrefix imagePrefix) {
+		return String.format("%s/%s", imagePrefix.getPrefix(), UUID.randomUUID());
 	}
 
 	// imagePath 검사
 	private void validateImagePath(String imagePath) {
 		if (imagePath == null || imagePath.isEmpty()) {
 			throw new AppException(INVALID_IMAGE_FILE_PATH_EXCEPTION);
+		}
+	}
+
+	// 이미지 복사
+	@Override
+	public String copyImage(String sourcePath, ImagePrefix destinationPrefix) {
+		String destinationPath = createPath(destinationPrefix);
+
+		CopyObjectRequest copyObjectRequest = CopyObjectRequest.builder()
+			.sourceBucket(s3Properties.getBucketName())
+			.sourceKey(sourcePath)
+			.destinationBucket(s3Properties.getBucketName())
+			.destinationKey(destinationPath)
+			.build();
+
+		try {
+			s3Client.copyObject(copyObjectRequest);
+			return destinationPath;
+		} catch (S3Exception e) {
+			log.error("S3ImageUtil.copyImage() - S3Exception: {}", e.getMessage());
+			throw new AppException(S3_SERVER_ERROR);
 		}
 	}
 }
